[tool.poetry]
name = "denoising-backmapping"
version = "0.1.0"
description = "Polymer Melt denoising diffusion backmapping from CG to atomistic coordinates"
authors = ["Gian-Michele <giovanni_michel.cherchi@uca.fr>"]

[tool.poetry.dependencies]
python = "^3.9"
xarray = "2023.11.0"
wandb = "^0.16.3"
hydra-core = "^1.3.2"
torch = "2.1.1"
tqdm = "^4.66.2"
PyYAML = "^6.0.1"
yml = "^0.0.1"
e3nn = "^0.5.1"
torch-scatter = "^2.1.2"
torch-cluster = "^1.6.3"
torch-geometric = "^2.5.0"
ipykernel = "^6.29.2"
rdkit = "^2023.9.5"
bigsmiles = "^0.0.10"
matplotlib = "^3.8.3"
MDAnalysis = "^2.7.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
